Fix z-index for react-select dropdowns in inline edit mode

--- a/app/assets/stylesheets/elements_table.scss
+++ b/app/assets/stylesheets/elements_table.scss
@@ -150,7 +150,7 @@ th.drag {
       {
         position: sticky;
         left: 0px;
-        z-index: 1030;
+        z-index: 10;
         border-right: 1px solid #ddd;
         background-color: white;
       }
@@ -159,7 +159,7 @@ th.drag {
       {
         position: sticky;
         right: 0px;
-        z-index: 1030;
+        z-index: 10;
         border-left: 1px solid #ddd;
         background-color: white;
         text-align: right;
